# ansiburr

./: .gitignore  BENCHMARK.md  CHANGELOG.md  LICENSE  NOTICE  README.md  REFERENCE.md  pyproject.toml
.github/workflows/: ci.yml
bench/: results.json  results.md  run.py  runner.py
examples/: from_playbook_walker.py  hero.py  localhost_disk_check.py  mast_sre_agent_walker.py
examples/cert_rotation/: fsm.py
examples/coffee_order_ansible/: fsm.py
examples/config_drift/: default.conf.j2  fsm.py
examples/fact_driven_inspect/: fsm.py
examples/from_playbook/: playbook.yml  run.py
examples/from_playbook_advanced/: playbook.yml  run.py
examples/from_playbook_role/: main.yml  run.py
examples/from_playbook_role/tasks/: setup-debian.yml  setup-redhat.yml
examples/log_triage/: fsm.py
examples/mast_sre_agent/: fsm.py
examples/plan_then_apply/: fsm.py
examples/service_remediation/: Dockerfile  fsm.py  setup.sh  start.sh  teardown.sh
examples/sidecar_lifecycle/: fsm.py
examples/user_provisioning/: fsm.py
scripts/: smoke_mount.py
src/ansiburr/: __init__.py  _action.py  _convert.py  _host.py  _runner.py  _wait.py  cli.py
tests/: test_cli.py  test_convert.py  test_failures.py  test_smoke.py
tests/fixtures/: apt-vars.yml  included_pings.yml  included_vars.yml  playbook_ansible_facts.yml  playbook_block_always.yml  playbook_block_always_failure.yml  playbook_block_group.yml  playbook_block_rescue.yml  playbook_block_rescue_always.yml  playbook_block_rescue_always_double_fail.yml  playbook_changed_when.yml  playbook_include_vars.yml  playbook_jinja_filters.yml  playbook_notify_unknown.yml  playbook_register.yml  playbook_set_fact.yml  playbook_simple.yml  playbook_templated_include.yml  playbook_templated_loop.yml  playbook_unsupported_block.yml  playbook_unsupported_loop.yml  playbook_unsupported_roles.yml  playbook_with_handlers.yml  playbook_with_import.yml  playbook_with_include.yml  playbook_with_include_role.yml  playbook_with_loop.yml  playbook_with_role.yml  playbook_with_when.yml
tests/fixtures/roles/myrole/defaults/: main.yml
tests/fixtures/roles/myrole/handlers/: main.yml
tests/fixtures/roles/myrole/tasks/: main.yml
tests/fixtures/roles/myrole/vars/: main.yml
vhs/: conversion.tape  fact_driven_inspect.tape  hero.tape  plan_then_apply.tape  sre_agent.tape
