[project]
name = "ansiburr"
version = "0.0.1"
description = "Author Ansible-module-backed Burr state machines as ordinary Python."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"
authors = [
    { name = "Adam Munawar Rahman", email = "msrahmanadam@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "ansible-core>=2.16,<3",
    "ansible-runner>=2.4,<3",
    "burr[tracking]>=0.40.2,<0.41",
    "pyyaml>=6",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ansiburr"]

[dependency-groups]
dev = [
    "pytest>=9",
    "ruff>=0.15",
    "mypy>=1.10",
    "types-pyyaml>=6",
    "docker>=7.1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM", "RUF", "PERF", "PIE", "RET"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
